--- a/index.html
+++ b/index.html
@@ -29,3 +29,28 @@
             color: #666;
             line-height: 1.6;
         }
+
+        
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to My Website</h1>
+        <p>This is a simple HTML page styled with CSS.</p>
+        <a href="#" class="btn">Click Me!</a>
+    </div>
+</body>
+</html>
